--- a/css/style1.css
+++ b/css/style1.css
@@ -1,12 +1,13 @@
 body {
 	background: url(nurses.jpg);
-	background: cover;
+	background-repeat: no-repeat;
+	/*background-size: cover;*/
 }
 
 	body, input, select, textarea {
 		color: #444;
 		font-family: "Raleway", Helvetica, sans-serif;
-		font-size: 13pt;
+		font-size: 11pt;
 		font-weight: 400;
 		line-height: 1.65em;
 	}
@@ -393,6 +394,37 @@ body {
 	-ms-box-shadow:0 0 50 #000;
 	display:none;
 }
+#form_overlay{
+	width:100%;
+	height:100%;
+	background:#000;
+	position:fixed;
+	top:0;
+	right:0;
+	bottom:0;
+	left:0;
+	opacity:0.9;
+	z-index:1000;
+	display:none;
+}
+#form_overlay_div{
+	background-color:white;
+	width:300px;
+	height:400px;
+	margin:0 auto;
+	position:absolute;
+	top:50%;
+	right:20%;
+	bottom:10%;
+	left:20%;
+	z-index:1500;
+	box-shadow:0 0 50px #000;
+	-o-box-shadow:0 0 50px #000;
+	-moz-box-shadow:0 0 50px #000;
+	-webkit-box-shadow:0 0 50px #000;
+	-ms-box-shadow:0 0 50 #000;
+	display:none;
+}
 .close-button{
 	cursor:pointer;
 	width:30px;
@@ -412,6 +444,28 @@ body {
 	border:solid 1px #fff;
 }
 
-/*section #banner h2{
-	color:#3cadd4;
-}*/
+#banner {
+		background-position: center center;
+		background-size: cover;
+		color: #ffffff;
+		padding: 14em 0em 14em;
+		text-align: center;
+	}
+
+		#banner :last-child {
+			margin-bottom: 0;
+		}
+
+		#banner h2 {
+			color: #ffffff;
+			font-size: 4em;
+			line-height: 1.25em;
+			margin: 0 0 0.5em 0;
+			padding: 0;
+		}
+
+		#banner p {
+			font-size: 1.5em;
+			margin-bottom: 1.75em;
+		}
+
